# contact_modes

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  bench_arrangements.cpp  bench_subspace.cpp  profile_arrangements.cpp
cpp/src/contact_modes/: CMakeLists.txt  backward.cpp
cpp/src/contact_modes/collision/: collide_2d.cpp  collide_2d.hpp  manifold_2d.hpp
cpp/src/contact_modes/geometry/: arrangements.cpp  arrangements.hpp  face_enumeration.hpp  incidence_graph.cpp  incidence_graph.hpp  linear_algebra.cpp  linear_algebra.hpp  set.hpp
cpp/src/contact_modes/pybind/: arrangements_interface.cpp  arrangements_interface.hpp  exportGeometry.cpp  incidence_graph_interface.cpp  incidence_graph_interface.hpp  module.cpp
cpp/test/: CMakeLists.txt  test_arrangements.cpp  test_arrangements.py  test_incidence_graph.cpp  test_linear_algebra.py
python/: setup.py
python/bench/: profile_arrangements.py
python/data/mesh/: cow_convex.dae  cube.dae
python/data/shader/: 2d.fs  2d.vs  basic_lighting.fs  basic_lighting.vs  bvh.fs  bvh.vs  depth_quad.fs  depth_quad.vs  flat.fs  normals.fs  normals.gs  normals.vs  pc.fs  pc.vs  sdf.fs  sdf.vs
python/data/shader/oit/: base_shade_vertex.glsl  base_vertex.glsl  front_peeling_blend_fragment.glsl  front_peeling_final_fragment.glsl  shade_fragment.glsl  weighted_blend_fragment.glsl  weighted_final_fragment.glsl
python/src/contact_modes/: __init__.py  _remove_redundancy.py  affine.py  constraints.py  exp.py  helpers.py  interior_point.py  lattice.py  modes_2d.py  modes_3d.py  modes_cases.py  planning_2d_cases.py  polytope.py  qplcp.py  se2.py  se3.py  so3.py  util.py
python/src/contact_modes/collision/: __init__.py  gjk.py  jda.py  manager.py  manager_2d.py  manifold.py
python/src/contact_modes/dynamics/: __init__.py  anthro.py  body.py  body_2d.py  constraints.py  link.py  octopus.py  proxy.py  static.py  system.py  tree.py
python/src/contact_modes/geometry/: __init__.py  affine.py  arrangements.py  incidence_graph.py  oriented_plane.py  zonotope.py
python/src/contact_modes/shape/: __init__.py  arrow.py  bounds.py  box.py  chain.py  collada.py  cylinder.py  ellipse.py  frame.py  grid.py  halfedgemesh.py  icosphere.py  link.py  polygon_2d.py  quad.py  shape.py  shape_2d.py  torus.py
python/src/contact_modes/symbolic/: __init__.py  helper.py  se3.py  so3.py
python/src/contact_modes/viewer/: __init__.py  application.py  arrow.py  basic_lighting.py  bounds.py  box.py  box_with_hole.py  camera.py  cone.py  cylinder.py  grid.py  halfedgemesh.py  icosphere.py  oit.py  orthonormal.py  polytope.py  se3.py  shader.py  shape.py  viewer.py
python/src/contact_modes/viewer/backend/: load_backend.py  pyopengl_backend.py
python/tests/: test_affine.py  test_affine_dependence.py  test_arrangements.py  test_arrow.py  test_chain.py  test_combinations.py  test_interior_point.py  test_modes_3d.py  test_polygon_2d.py  test_polytope.py  test_qplcp.py  test_shapes.py  test_zonotope.py
tex/: RSS2020_ContactModeEnum.tex  references.bib  zotero.bib
tex/ijrr/: IJRR_Contact_Modes.tex
